# python-guess-elf-arch

./: LICENSE.txt  README.md  appimagecraft.yml  guess_elf_arch.py  pyproject.toml
.github/workflows/: main.yml
deployment/: AppRun.sh  pygea.desktop
